layout: made signup layout better, fixed weird close button spacing

--- a/styles/Navbar/Navbar.module.css
+++ b/styles/Navbar/Navbar.module.css
@@ -67,12 +67,13 @@
 .modal_wrap {
     position: absolute;
     display: grid;
-    grid-template-rows: 10% 30% 30% 30%;
+    grid-template-rows: 5% 30% 30% 30%;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     min-width: 25rem;
     min-height: 30rem;
+    gap: 3rem;
     background-color: var(--bg);
     border: var(--border);
     z-index: 4;
@@ -89,7 +90,8 @@
     transform: rotate(45deg);
     width: fit-content;
     height: fit-content;
-    align-self: center;
+    padding: 1rem 0;
+    /* align-self: center; */
     justify-self: flex-end;
     user-select: none;
     /* padding: 0 1rem; */
